bamoe-app/5-app/process-example-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: process-example-app
  name: process-example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: process-example-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: process-example-app
    spec:
      containers:
        - env:
            - name: QUARKUS_HTTP_CORS_ORIGINS
              value: /.*/
            - name: QUARKUS_OIDC_ENABLED
              value: 'true'
            - name: QUARKUS_OIDC_AUTH_SERVER_URL
              value: https://keycloak-admin.bamoe-canvas-3cd0ec11030dfa215f262137faf739f1-0000.eu-gb.containers.appdomain.cloud/realms/kogito
            - name: QUARKUS_OIDC_TENANT_ID
              value: kogito
            - name: QUARKUS_OIDC_CLIENT_ID
              value: kogito-travel-app
            - name: QUARKUS_OIDC_CREDENTIALS_SECRET
              value: secret
            - name: QUARKUS_OIDC_APPLICATION_TYPE
              value: web-app
            - name: QUARKUS_OIDC_TOKEN_STATE_MANAGER_STRATEGY
              value: id-refresh-tokens
          image: docker.io/ldesrosi/kogito-travel-agency:latest
          name: process-example-app
          command: ["/bin/sh"]
          args: ["-c", "cd /deployments; java -jar /deployments/quarkus-run.jar"]
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /home/kogito/data/svg
              name: process-example-app-claim0
      restartPolicy: Always
      volumes:
        - name: process-example-app-claim0
          persistentVolumeClaim:
            claimName: process-example-app-claim0
