bamoe-app/5-app/process-example-app-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: process-example-app-ingress
  namespace: bamoe-app
  labels:
    app.kubernetes.io/component: process-example-app
    app.kubernetes.io/instance: process-example-app
    app.kubernetes.io/name: process-example-app
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
    - host: process-example-app.bamoe-canvas-3cd0ec11030dfa215f262137faf739f1-0000.eu-gb.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: process-example-app
                port:
                  name: http
